# GymUp-LM

./: .gitignore  2026.01.30-00.08.44_workout.db  CLAUDE.md  IMPROVEMENTS_PLAN.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
src/gymup_tracker/: __init__.py  __main__.py  cli.py  config.py
src/gymup_tracker/analytics/: __init__.py  metrics.py  progression.py  trends.py
src/gymup_tracker/db/: __init__.py  constants.py  models.py  queries.py
src/gymup_tracker/llm/: __init__.py  client.py  functions.py  prompts.py  setup.py
src/gymup_tracker/ui/: __init__.py  app.py
src/gymup_tracker/ui/components/: __init__.py  cards.py  charts.py
src/gymup_tracker/ui/views/: analytics.py  dashboard.py  exercises.py  programs.py
tests/: __init__.py
